choose-section added

--- a/index.html
+++ b/index.html
@@ -253,6 +253,310 @@
             </section>
             <!------------!-------------- SERVICE SECTION END -------------!------------>
 
+            <section id="choose-section">
+                <div class="container">
+                    <div class="section-heading text-center">
+                        <span class="choose-subtitle">Choose car by your taste</span>
+                        <h2>Popular used car</h2>
+                    </div>
+                    <ul class="nav nav-tabs" id="myTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button
+                                class="nav-link active"
+                                id="home-tab"
+                                data-bs-toggle="tab"
+                                data-bs-target="#home-tab-pane"
+                                type="button"
+                                role="tab"
+                                aria-controls="home-tab-pane"
+                                aria-selected="true"
+                            >
+                                by city
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button
+                                class="nav-link"
+                                id="profile-tab"
+                                data-bs-toggle="tab"
+                                data-bs-target="#profile-tab-pane"
+                                type="button"
+                                role="tab"
+                                aria-controls="profile-tab-pane"
+                                aria-selected="false"
+                            >
+                                by price
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button
+                                class="nav-link"
+                                id="contact-tab"
+                                data-bs-toggle="tab"
+                                data-bs-target="#contact-tab-pane"
+                                type="button"
+                                role="tab"
+                                aria-controls="contact-tab-pane"
+                                aria-selected="false"
+                            >
+                                by model
+                            </button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button
+                                class="nav-link"
+                                id="disabled-tab"
+                                data-bs-toggle="tab"
+                                data-bs-target="#disabled-tab-pane"
+                                type="button"
+                                role="tab"
+                                aria-controls="disabled-tab-pane"
+                                aria-selected="false"
+                            >
+                                by popularity
+                            </button>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="myTabContent">
+                        <div class="tab-pane fade show active" id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+                            <div class="search-city">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <input type="search" name="search" id="search-city" placeholder="Search your city" />
+                                <button type="submit" class="btn-custom">search</button>
+                            </div>
+
+                            <div class="row g-5">
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-1.png" alt="" />
+                                        </div>
+                                        <h4>new york</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-2.png" alt="" />
+                                        </div>
+                                        <h4>ontario</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-3.png" alt="" />
+                                        </div>
+                                        <h4>mumbai</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-4.png" alt="" />
+                                        </div>
+                                        <h4>los angeles</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-5.png" alt="" />
+                                        </div>
+                                        <h4>san francisco</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-6.png" alt="" />
+                                        </div>
+                                        <h4>dubai</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0">
+                            <div class="search-city">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <input type="search" name="search" id="search-city" placeholder="Search your city" />
+                                <button type="submit" class="btn-custom">search</button>
+                            </div>
+
+                            <div class="row g-5">
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-1.png" alt="" />
+                                        </div>
+                                        <h4>new york</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-2.png" alt="" />
+                                        </div>
+                                        <h4>ontario</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-3.png" alt="" />
+                                        </div>
+                                        <h4>mumbai</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-4.png" alt="" />
+                                        </div>
+                                        <h4>los angeles</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-5.png" alt="" />
+                                        </div>
+                                        <h4>san francisco</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-6.png" alt="" />
+                                        </div>
+                                        <h4>dubai</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0">
+                            <div class="search-city">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <input type="search" name="search" id="search-city" placeholder="Search your favorite model" />
+                                <button type="submit" class="btn-custom">search</button>
+                            </div>
+
+                            <div class="row g-5">
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/cars/experience-section.png" alt="" />
+                                        </div>
+                                        <h4>Volvo C40 Recharge</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/hero-img/car.png" alt="" />
+                                        </div>
+                                        <h4>Chevrolet Camaro</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/service/car.png" alt="" />
+                                        </div>
+                                        <h4>Toyota Camry</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/hero-img/car.png" alt="" />
+                                        </div>
+                                        <h4>Toyota Camry Hybrid</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/guide/guide-img-car.png" alt="" />
+                                        </div>
+                                        <h4>Audi A4</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/cars/experience-section.png" alt="" />
+                                        </div>
+                                        <h4>Hyundai Accent</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">
+                            <div class="search-city">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <input type="search" name="search" id="search-city" placeholder="Search your city" />
+                                <button type="submit" class="btn-custom">search</button>
+                            </div>
+
+                            <div class="row g-5">
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-1.png" alt="" />
+                                        </div>
+                                        <h4>new york</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-2.png" alt="" />
+                                        </div>
+                                        <h4>ontario</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-3.png" alt="" />
+                                        </div>
+                                        <h4>mumbai</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-4.png" alt="" />
+                                        </div>
+                                        <h4>los angeles</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-5.png" alt="" />
+                                        </div>
+                                        <h4>san francisco</h4>
+                                    </div>
+                                </div>
+                                <div class="col-xl-4">
+                                    <div class="single-city">
+                                        <div class="single-city-img">
+                                            <img src="assets/img/choose/city-6.png" alt="" />
+                                        </div>
+                                        <h4>dubai</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!------------!-------------- GUIDE SECTION START -------------!------------>
             <section id="guide-section">
                 <div class="container">
