search-btn-fixed

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                 </div>
             </section>
 
+            <!------------!-------------- BOOKING SECTION START -------------!------------>
             <section id="booking-section">
                 <div class="container">
                     <div class="row justify-content-center">
@@ -151,6 +152,7 @@
                     </div>
                 </div>
             </section>
+            <!------------!-------------- BOOKING SECTION END -------------!------------>
 
             <!------------!-------------- PROCESS(HOW IT WORKS) SECTION START -------------!------------>
             <section id="process-section">
