--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                 <div class="app-bg mx-auto">
                     <div class="container">
                         <div class="row justify-content-between">
-                            <div class="col-xl-6">
+                            <div class="col-xl-6 col-lg-8">
                                 <div class="app-content">
                                     <h2>Download the free Quickcab App</h2>
                                     <span class="app-subtitle">for Quicker, Easier and on time services</span>
@@ -669,9 +669,9 @@
                                 </div>
                             </div>
 
-                            <div class="col-xl-3">
+                            <div class="col-xl-3 col-lg-3">
                                 <div class="app-screenshot">
-                                    <img src="./assets/img/app/screenshot.png" alt="" />
+                                    <img src="./assets/img/app/screenshot.png" alt="" class="img-fluid" />
                                 </div>
                             </div>
                         </div>
@@ -725,7 +725,7 @@
 
                         <div class="col-xl-5 col-lg-7">
                             <!-- ! SUBSCRIBE AND SOCIAL ICONS HERE ! -->
-                            <div class="footer-widget">
+                            <div class="footer-widget text-center">
                                 <h3>WANT TO SEE MORE</h3>
                                 <div class="subscribe">
                                     <i class="fa-solid fa-envelope"></i>
