--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         <div class="col-xl-10">
                             <div class="select-process">
                                 <div class="row align-items-center">
-                                    <div class="col-lg-3 col-md-12">
+                                    <div class="col-lg-3 col-sm-12 col-12">
                                         <div class="destination d-flex align-items-center">
                                             <i class="fa-solid fa-location-dot"></i>
                                             <select class="form-select" aria-label="Default select example">
@@ -132,7 +132,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-3 col-md-6">
+                                    <div class="col-lg-3 col-sm-6 col-6">
                                         <div class="pickup-date d-flex align-items-center">
                                             <i class="fa-regular fa-calendar-day"></i>
                                             <input type="text" class="datepicker" size="30" placeholder="Pick-up date" />
@@ -140,7 +140,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-3 col-md-6">
+                                    <div class="col-lg-3 col-sm-6 col-6">
                                         <div class="return-date d-flex align-items-center">
                                             <i class="fa-regular fa-calendar-day"></i>
                                             <input type="text" class="datepicker" size="30" placeholder="Return date" />
@@ -148,7 +148,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-3 col-md-12 d-flex align-items-center">
+                                    <div class="col-lg-3 col-sm-12 col-12 d-flex align-items-center">
                                         <a href="#" class="btn-custom ms-auto">search</a>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
 
                     <div class="process-container">
                         <div class="row justify-content-center">
-                            <div class="col-xl-3 col-lg-4 col-md-6">
+                            <div class="col-xl-3 col-lg-4 col-sm-6">
                                 <div class="single-process">
                                     <div class="single-process-icon">
                                         <i class="fa-solid fa-location-dot"></i>
@@ -179,7 +179,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xl-3 col-lg-4 col-md-6">
+                            <div class="col-xl-3 col-lg-4 col-sm-6">
                                 <div class="single-process">
                                     <div class="single-process-icon second-icon">
                                         <i class="fa-solid fa-calendar-check"></i>
@@ -189,7 +189,7 @@
                                 </div>
                             </div>
 
-                            <div class="col-xl-3 col-lg-4 col-md-6">
+                            <div class="col-xl-3 col-lg-4 col-sm-6">
                                 <div class="single-process">
                                     <div class="single-process-icon last-icon">
                                         <i class="fa-solid fa-car"></i>
@@ -326,7 +326,7 @@
                             </div>
 
                             <div class="row g-5">
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
@@ -334,7 +334,7 @@
                                         <h4>new york</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
@@ -342,7 +342,7 @@
                                         <h4>ontario</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
@@ -350,7 +350,7 @@
                                         <h4>mumbai</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
@@ -358,7 +358,7 @@
                                         <h4>los angeles</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
@@ -366,7 +366,7 @@
                                         <h4>san francisco</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
@@ -385,7 +385,7 @@
                             </div>
 
                             <div class="row g-5">
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
@@ -393,7 +393,7 @@
                                         <h4>new york</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
@@ -401,7 +401,7 @@
                                         <h4>ontario</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
@@ -409,7 +409,7 @@
                                         <h4>mumbai</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
@@ -417,7 +417,7 @@
                                         <h4>los angeles</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
@@ -425,7 +425,7 @@
                                         <h4>san francisco</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
@@ -443,8 +443,8 @@
                                 <button type="submit" class="btn-custom">search</button>
                             </div>
 
-                            <div class="row g-5">
-                                <div class="col-lg-4 col-sm-6">
+                            <div class="row">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/cars/experience-section.png" alt="" />
@@ -452,7 +452,7 @@
                                         <h4>Volvo C40 Recharge</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/hero-img/car.png" alt="" />
@@ -460,7 +460,7 @@
                                         <h4>Chevrolet Camaro</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/service/car.png" alt="" />
@@ -468,7 +468,7 @@
                                         <h4>Toyota Camry</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/hero-img/car.png" alt="" />
@@ -476,7 +476,7 @@
                                         <h4>Toyota Camry Hybrid</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/guide/guide-img-car.png" alt="" />
@@ -484,7 +484,7 @@
                                         <h4>Audi A4</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/cars/experience-section.png" alt="" />
@@ -503,7 +503,7 @@
                             </div>
 
                             <div class="row g-5">
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-1.png" alt="" />
@@ -511,7 +511,7 @@
                                         <h4>new york</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-2.png" alt="" />
@@ -519,7 +519,7 @@
                                         <h4>ontario</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-3.png" alt="" />
@@ -527,7 +527,7 @@
                                         <h4>mumbai</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-4.png" alt="" />
@@ -535,7 +535,7 @@
                                         <h4>los angeles</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-5.png" alt="" />
@@ -543,7 +543,7 @@
                                         <h4>san francisco</h4>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6 col-xxs-12">
                                     <div class="single-city">
                                         <div class="single-city-img">
                                             <img src="assets/img/choose/city-6.png" alt="" />
